Set GPL license to the project