@@ -1,3 +1,21 @@
+/*******************************************************************************
+ * Copyright (C) 2017-2018 César Benito Lamata
+ * 
+ * This file is part of SCRT.
+ * 
+ * SCRT is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * 
+ * SCRT is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with SCRT.  If not, see <http://www.gnu.org/licenses/>.
+ ******************************************************************************/
 package scrt.regulation.grp;
 
 import java.util.ArrayList;
@@ -26,7 +44,7 @@ public class GRP {
 		{
 			t1.setPriority();
 			t2.setPriority();
-			return new Integer(t1.Priority).compareTo(t2.Priority);
+			return Integer.valueOf(t1.priority).compareTo(t2.priority);
 		});
 		for(GRPRule rule : rules)
 		{
